<resources>
    <string name="app_name">ExerciseCRUD</string>
    <string name="j1110">Daftar Kontak</string>
    <string name="j1111">Tambah Data</string>
    <string name="j1112">Profil</string>
    <string name="j1114">Update Data</string>
    <string name="t1110">:</string>
    <string name="t1111">Nama</string>
    <string name="t1112">Masukkan Nama</string>
    <string name="t1113">Nomor Telepon</string>
    <string name="t1114">Masukkan Nomor telepon</string>
    <string name="t1115">Email</string>
    <string name="t1116">Masukkan Email</string>
    <string name="t1117">Alamat</string>
    <string name="t1118">Masukkan Alamat</string>
    <string name="b1111">Simpan</string>
    <string name="b1112">Batal</string>
    <string name="b1114">Ubah Data</string>
    <string name="title_activity_insert">Insert</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_update">Update</string>
    <string name="title_activity_profile">Profile</string>
</resources>
